Some fix on tablet layout

--- a/source/stylesheets/_beeconnect.sass
+++ b/source/stylesheets/_beeconnect.sass
@@ -29,7 +29,7 @@ section.hero
   +padding(68px null null)
 
   +media($tablet)
-    +padding(51px null null)
+    +padding(55px null null)
 
     .content
       +padding(null 0)
@@ -50,18 +50,19 @@ blockquote
   +padding(88px 175px)
   text-align: center
 
+  +media($tablet)
+    +padding(88px 20px)
+
 .index
   section.hero
     figure
       +span-columns(5)
-      height: 598px
 
       +media($tablet)
         +span-columns(4 of 8)
-        height: auto
 
         img
-          +size(99.3% 79%)
+          +size(93.4% 79%)
 
       +media($mobile)
         +fill-parent
