--- a/source/stylesheets/utilities/_reset.sass
+++ b/source/stylesheets/utilities/_reset.sass
@@ -50,3 +50,7 @@ sup
 
 sub
   bottom: -0.25em
+
+figure
+  line-height: 0
+  font-size: 0
